@@ -6,6 +6,8 @@
 	flash9 : fixed issue with @:bind
 	flash9 : added some missing errors
 	flash9 : fixed TypedDictionary.exists
+	all : added @:build for enums
+	neko : Std.parseFloat now returns NaN with invalid string
 
 2010-08-14: 2.06
 	neko : change serializer to be able to handle instances of basic classes from other modules
